[FIX] overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,6 @@ html {
   min-height: 100%;
 }
 body {
- width: 100vw;
- height: 100vh;
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
